# luacv

./: CHANGELOG  INSTALL  LICENSE  README  test.sh
cmake_modules/: FindOpenCv.cmake
samples/: bgfg_codebook.lua  bgfg_segm.lua  calibration.lua  cam.avi  camshiftdemo.lua  chessboard.lua  connected_components.lua  contours.lua  convexhull.lua  cvseq.lua  demhist.lua  dft.lua  distrans.lua  drawing.lua  edge.lua  facedetect.lua  fback_c.lua  fitellipse.lua  floodfill.lua  gnuplot_demhist.lua  houghlines.lua  inpaint.lua  kalman.lua  kmeans.lua  laplace.lua  latentsvmdetect.lua  lkdemo.lua  matrix.lua  meanshift_segmentation.lua  minarea.lua  morphology.lua  motempl.lua  polartrans.lua  pyramid_seg.lua  squares.lua  stardetector.lua  template_match.lua  watershed.lua
src/: .lua_features2d.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lua_calib3d.cpp  lua_calib3d.h  lua_core.cpp  lua_core.h  lua_features2d.cpp  lua_features2d.h  lua_highgui.cpp  lua_highgui.h  lua_imgproc.cpp  lua_imgproc.h  lua_legacy.cpp  lua_legacy.h  lua_objdetect.cpp  lua_objdetect.h  lua_video.cpp  lua_video.h  luacv.cpp  luacvaux.cpp  luacvaux.h  test.lua
src/objects/: Cv3dTracker2dTrackedObject.cpp  Cv3dTracker2dTrackedObject.h  Cv3dTrackerTrackedObject.cpp  Cv3dTrackerTrackedObject.h  CvArr.cpp  CvArr.h  CvBGCodeBookElem.cpp  CvBGCodeBookElem.h  CvBGCodeBookModel.cpp  CvBGCodeBookModel.h  CvBGPixelCCStatTable.cpp  CvBGPixelCCStatTable.h  CvBGPixelCStatTable.cpp  CvBGPixelCStatTable.h  CvBGPixelStat.cpp  CvBGPixelStat.h  CvBGStatModel.cpp  CvBGStatModel.h  CvBox2D.cpp  CvBox2D.h  CvCapture.cpp  CvCapture.h  CvChain.cpp  CvChain.h  CvChainPtReader.cpp  CvChainPtReader.h  CvConnectedComp.cpp  CvConnectedComp.h  CvContour.cpp  CvContour.h  CvContourScanner.cpp  CvContourScanner.h  CvContourTree.cpp  CvContourTree.h  CvEHMM.cpp  CvEHMM.h  CvFGDStatModel.cpp  CvFGDStatModel.h  CvFGDStatModelParams.cpp  CvFGDStatModelParams.h  (+150 more)
